<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideLine"
        android:text="@string/choose_your_registration_recipe_and_your_application"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/btnStudent"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideLine"
        android:text="@string/student"
        android:paddingHorizontal="40dp"

        />

    <Button
        android:id="@+id/btnUniEmployee"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStudent"
        android:text="@string/university_employee"
        android:paddingHorizontal="30dp"
        />
    <Button
        android:id="@+id/btnMinyEmployee"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUniEmployee"

        android:text="@string/employee_of_the_ministry_of_higher_education"

        android:paddingHorizontal="8dp"
        />





</androidx.constraintlayout.widget.ConstraintLayout>