<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LandingActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_registration_recipe_and_your_application"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/guideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStudent"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:text="@string/student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideLine"

        />

    <Button
        android:id="@+id/btnUniEmployee"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:text="@string/university_employee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStudent" />

    <Button
        android:id="@+id/btnMinyEmployee"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:text="@string/employee_of_the_ministry_of_higher_education"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/btnUniEmployee" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login if already : "
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/tvCitizen"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMinyEmployee" />

    <TextView
        android:id="@+id/tvCitizen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Citizen"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:onClick="citizenLogin"
        app:layout_constraintEnd_toStartOf="@id/tvOr"
        app:layout_constraintStart_toEndOf="@id/tvLogin"
        app:layout_constraintTop_toTopOf="@id/tvLogin" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="or"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/tvEmployee"
        app:layout_constraintStart_toEndOf="@id/tvCitizen"
        app:layout_constraintTop_toTopOf="@id/tvLogin" />


    <TextView
        android:id="@+id/tvEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Employee"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:onClick="employeeLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>