<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StudentRegisterFragment"
    android:backgroundTint="@android:color/black">

   <ImageView
       android:id="@+id/headerImage"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       android:src="@drawable/office"
       android:adjustViewBounds="true"
       android:alpha="0.5"/>
    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/headerImage"
        app:layout_constraintEnd_toEndOf="@id/headerImage"
        app:layout_constraintTop_toTopOf="@id/headerImage"
        app:layout_constraintBottom_toTopOf="@id/tvInstructions"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/hello_friend"/>
    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_in_your_information_to_launch_your_profile_get_started"
       android:layout_marginHorizontal="40dp"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@id/headerImage"
        app:layout_constraintEnd_toEndOf="@id/headerImage"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
        app:layout_constraintBottom_toTopOf="@id/guideLine"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.24"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideLine"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/scroll_view_shape"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_marginStart="108dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tilFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideLine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/first_name"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toStartOf="@id/tilLastName"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSignup"
                app:layout_constraintBottom_toTopOf="@id/linear">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@id/tilFirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tilFirstName"
                app:layout_constraintTop_toTopOf="@id/tilFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/guideLine2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilFirstName">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

             <!--   <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    app:endIconMode="dropdown_menu">

                    <AutoCompleteTextView
                        android:id="@+id/etGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/gender"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cardNumber"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etIdNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passport"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/universityNumber"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUniversityNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

         <!--       <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nationality"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNationality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/motherNationality"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMotherNationality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    app:endIconMode="dropdown_menu">

                    <AutoCompleteTextView
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    app:endIconMode="password_toggle"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>-->


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>













    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>