<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ministryEmployee.SignupMinistryActivity">
        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/office"
            android:adjustViewBounds="true"
            android:alpha="0.5" />

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/headerImage"
            app:layout_constraintEnd_toEndOf="@id/headerImage"
            app:layout_constraintTop_toTopOf="@id/headerImage"
            app:layout_constraintBottom_toTopOf="@id/tvInstructions"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/form_header_shape"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/hello_friend" />

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_fill_in_your_information_to_launch_your_profile_get_started"
            android:layout_marginHorizontal="40dp"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/form_header_shape"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            app:layout_constraintStart_toStartOf="@id/headerImage"
            app:layout_constraintEnd_toEndOf="@id/headerImage"
            app:layout_constraintTop_toBottomOf="@id/tvGreeting"
            app:layout_constraintBottom_toTopOf="@id/guideLine" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.24"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideLine"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/scroll_view_shape">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:layout_marginStart="108dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/til_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideLine2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.7" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxBackgroundMode="filled"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginVertical="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSignup"
                    app:layout_constraintEnd_toStartOf="@id/guideLine2"
                    app:layout_constraintBottom_toTopOf="@id/til_password">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    app:layout_constraintStart_toStartOf="@id/til_email"
                    app:layout_constraintEnd_toEndOf="@id/til_email"
                    app:layout_constraintTop_toBottomOf="@id/til_email"
                    app:layout_constraintBottom_toTopOf="@id/btn_signUp"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:endIconMode="password_toggle"
                    app:boxBackgroundMode="filled"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="2dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginVertical="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="18dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:onClick="SignUp"
                    app:layout_constraintStart_toStartOf="@id/til_email"
                    app:layout_constraintEnd_toEndOf="@id/til_email"
                    app:layout_constraintTop_toBottomOf="@id/til_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>